# moodflow

./: Cargo.toml  MoodFlow.xmind  README.md
src/: analytics.rs  app.rs  database.rs  main.rs  models.rs  mood.rs  settings.rs
